# tap-blackbaud

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-blackbaud.sh
tap_blackbaud/: streams.py  tap.py
tap_blackbaud/tests/: __init__.py  test_core.py
